crates/article_scraper/tests/snapshots/scraper__reading_time-3.snap
---
source: crates/article_scraper/tests/scraper.rs
expression: document.content_text
---

        
            This article is a part of my graduate assignment at the Aaron Copland School of Music.
        
        
            [update: To learn guitar online, start a free trial at Pickup Music. I'm the
            co-founder of this company. It's the fastest way to get better at guitar online]
        
        
            Very few musicians have reached Joe's level of technical and musical mastery which he developed at
            a young age. Many critics and writers have labeled Joe a 'Genius'. As you read on about his story,
            build an image of who Joe Pass was and decide for yourself if the label 'Genius' applies.
        
        
            Joe Pass was born on January 13th 1929 in New Brunswick, New Jersey. He started playing guitar at
            the age of 9 when he moved to Pennsylvania from New Jersey. Neither of Joe's parents were musicians
            although he would often hear the local Italian guys in his neighbourhood playing accordion when they
            hanged out with his father, drinking wine and relaxing.
        
        
            Joe began taking lessons every Sunday with a local teacher instead of going to church. After 6–8 months
            learning with a teacher he was already playing at parties and dances with older, experienced musicians.
        
        
            Not only does Joe stand as one of the world's greatest guitarists of all time, he is also one of
            the greatest educators. His legacy lives on through the knowledge and skills he
            so generously shared with students around the world. In Part 2 of this story I will share with you
            a summary of Joe's approach to solo jazz guitar.
